apps/kube/restream/manifests/restream-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: restreamer
  namespace: restream
  labels:
    app: restreamer
spec:
  selector:
    app: restreamer
  ports:
  - name: web
    port: 8080
    targetPort: 8080
    protocol: TCP
  - name: api
    port: 8181
    targetPort: 8181
    protocol: TCP
  - name: rtmp
    port: 1935
    targetPort: 1935
    protocol: TCP
  - name: rtmp-alt
    port: 1936
    targetPort: 1936
    protocol: TCP
  - name: udp
    port: 6000
    targetPort: 6000
    protocol: UDP
  type: ClusterIP
