apps/kube/restream/manifests/restream-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: restreamer
  namespace: restream
  labels:
    app: restreamer
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-http"
    cert-manager.io/http01-ingress-path-type: "Prefix"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - restreamer.kbve.com
    secretName: restreamer-tls
  rules:
  - host: restreamer.kbve.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: restreamer
            port:
              number: 8080
